--- a/Review-vies/Review-vies.csproj
+++ b/Review-vies/Review-vies.csproj
@@ -5,6 +5,10 @@
     <RootNamespace>Review_vies</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+  </ItemGroup>
+
 
 
 </Project>
